页面公共组件提取

--- a/AppCan_Project/asset-11655123/phone/login.html
+++ b/AppCan_Project/asset-11655123/phone/login.html
@@ -21,34 +21,31 @@
             <div class="bc-bg ub ub-ver ub-ac ub-con" data-control="FLEXBOXVER" id="ContentFlexVer">
                 <div class="ub ub-ver uinn-a3 ub-fv ub-fh" style="padding-top:3em">
                     <div class="ub ub-ver uinn-a4">
-                        <form >
-                            <div class="umar-a uba bc-border c-wh">
-                                <div class="ub ub-ac ubb umh5 bc-border ">
-                                    <div class=" uinput ub ub-f1">
-                                        <div class="uinn fa fa-user sc-text"></div>
-                                        <input placeholder="用户名" type="text" class="ub-f1" id="name" name="name" data-bind="value:name">
-                                    </div>
-                                </div>
-                                <div class="ub ub-ac umh5 bc-border ">
-                                    <div class=" uinput ub ub-f1">
-                                        <div class="uinn fa fa-lock sc-text"></div>
-                                        <input placeholder="密码" type="password" class="umw4 ub-f1" id="pwd" name="pwd" data-bind="value:pwd">
-                                    </div>
+                        <div class="umar-a uba bc-border c-wh">
+                            <div class="ub ub-ac ubb umh5 bc-border ">
+                                <div class=" uinput ub ub-f1">
+                                    <div class="uinn fa fa-user sc-text"></div>
+                                    <input placeholder="用户名" type="text" class="ub-f1" id="name" name="name" data-bind="value:name">
                                 </div>
                             </div>
-                            <div class="ub ub-ver">
-                                
-                                <div class="uinn uinn-at1">
-                                    <div class="ub ub-pe uinn-a6 sc-text-active ulev-4">忘记密码</div>
-                                    <div class="button ub ub-ac bc-text-head ub-pc bc-btn uc-a1" id="submit">登录</div>
-                                    <div class="uinn-at2 ub sc-text-active ulev-4">
-                                        <div class="ub-f1">立即注册</div>
-                                        <div class="ub-f1 tx-r">无账号快捷登录</div>
-                                    </div>
-                                    <div>测试用户 : MA1 MK1 MK2 , 密码都是123</div>
+                            <div class="ub ub-ac umh5 bc-border ">
+                                <div class=" uinput ub ub-f1">
+                                    <div class="uinn fa fa-lock sc-text"></div>
+                                    <input placeholder="密码" type="password" class="umw4 ub-f1" id="pwd" name="pwd" data-bind="value:pwd">
                                 </div>
                             </div>
-                        </form>
+                        </div>
+                        <div class="ub ub-ver">
+                            
+                            <div class="uinn uinn-at1">
+                                <div class="button ub ub-ac bc-text-head ub-pc bc-btn uc-a1" id="submit">登录</div>
+                                <div class="uinn-at2 ub sc-text-active ulev-4">
+                                    <div class="ub-f1">立即注册</div>
+                                    <div class="ub-f1 tx-r">忘记密码</div>
+                                </div>
+                                <div>测试用户 : MA1 MK1 MK2 , 密码都是123</div>
+                            </div>
+                        </div>
 
                     </div>
 					<div class="uinn-4b"></div>
@@ -64,6 +61,7 @@
 		<script src="js/appcan.slider.js"></script>
 		<script src="js/appcan.tab.js"></script>
 		<script src="js/appcan.treeview.js"></script>
+		<script src="js/vue/vue.js"></script>
 		<script src="js/common.js"></script>
         <script src="js/login.js"></script>
     </body>
