--- a/AppCan_Project/asset-11655123/phone/index.html
+++ b/AppCan_Project/asset-11655123/phone/index.html
@@ -15,18 +15,9 @@
 
     <body ontouchstart>
         <div class="bc-bg" tabindex="0" data-control="PAGE" id="Page">
-            <div class="uh bc-head  ubb bc-border" data-control="HEADER" id="Header">
-                <div class="ub">
-                    <div class="nav-btn" id="nav-left" v-on:click="closeView">
-                        <div class="fa fa-1g ub-img1 fa-chevron-left"></div>
-                    </div>
-
-                    <h1 class="ut ub-f1 ulev-3 ut-s tx-c" tabindex="0">{{tabs.items[tabs.selectIndex].text}}</h1>
-                    <div class="nav-btn" id="nav-right">
-                        <div class="fa  fa-1g  ub-img1"></div>
-                    </div>
-                </div>
-            </div>
+            <header-component v-bind:title="tabs.items[tabs.selectIndex].text" v-bind:hasbackbtn="false">
+            </header-component>
+            
             <div data-control="CONTENT" id="ScrollContent">
                 <div id="listview"  class="ubt bc-border sc-bg">
                     <ul>
@@ -39,6 +30,7 @@
                     </ul>
                 </div>
             </div>
+            
             <div class="uf sc-bg ubt sc-border-tab ub-f1 ub" data-control="FOOTER" id="Footer">
                 <div class="ub-f1 ub" data-control="TAB" id="Tab">
                     <div class="uf t-bla ub tab_m">
@@ -61,6 +53,7 @@
         <script src="js/appcan.listview.js"></script>
         <script src="js/appcan.tab.js"></script>
         <script src="js/vue/vue.js"></script>
+        <script src="js/common.js"></script>
         <script src="js/index.js"></script>
     </body>
 
