--- a/AppCan_Project/asset-11655123/phone/zc/search.html
+++ b/AppCan_Project/asset-11655123/phone/zc/search.html
@@ -18,26 +18,10 @@
     </head>
     <body ontouchstart>
         <div class="bc-bg" tabindex="0" data-control="PAGE" id="Page">
-            <div class="uh bc-head  ubb bc-border" data-control="HEADER" id="Header">
-                <div class="ub">
-                    <div class="nav-btn" id="nav-left">
-                        <div class="fa fa-1g ub-img1"></div>
-                    </div>
-                    <h1 class="ut ub-f1 ulev-3 ut-s tx-c" tabindex="0">查询结果</h1>
-                    <div class="nav-btn" id="nav-right">
-                        <div class="fa  fa-1g  ub-img1"></div>
-                    </div>
-                </div>
-            </div>
+            <header-component v-bind:title="'查询结果'" v-bind:hasbackbtn="true">
+            </header-component>
             <div data-control="CONTENT" id="ScrollContent">
-  <div class="scrollbox">
-    <div class="box_bounce ub ub-ver ub-pc">
-      <div class="ub-f1">
-      </div>
-      <div class="bounce_status">下拉更新......</div>
-      <div class="bounce_status">松手更新......</div>
-      <div class="bounce_status">更新中......</div>
-    </div>
+        <div class="scrollbox">
         <div class="ub ub-hor ub-f1 ulev-1 uinn ub-ac c-gra1 txtcolor">
             <div class="ub-f1 ub-con ub-ac ub-pc ub">
                 编码
@@ -60,7 +44,7 @@
                 <div class="ub-f1 ub-con ub-ac ub-pc ub">{{item.lbie}}</div>
             </div>
         </div>
-        <div v-if="!resultList || resultList.length==0">没有符合条件的数据</div>
+        <div v-if="!resultList || resultList.length==0">{{tip}}</div>
         <div class="uinn uinn-at1">
             <div class="button ub ub-ac bc-text-head ub-pc bc-btn uc-a1" v-on:click="addToList">添加到清单</div>
         </div>
