--- a/AppCan_Project/asset-11655123/phone/zc/zcck/zc_receive.html
+++ b/AppCan_Project/asset-11655123/phone/zc/zcck/zc_receive.html
@@ -23,35 +23,19 @@
     </head>
     <body ontouchstart>
         <div class="bc-bg" tabindex="0" data-control="PAGE" id="Page">
-            <div class="uh bc-head  ubb bc-border" data-control="HEADER" id="Header">
-                <div class="ub">
-                    <div class="nav-btn" id="nav-left">
-                        <div class="fa fa-1g ub-img1"></div>
-                    </div>
-                    <h1 class="ut ub-f1 ulev-3 ut-s tx-c" tabindex="0">资产出库清单</h1>
-                    <div class="nav-btn" id="nav-right">
-                        <div class="fa  fa-1g  ub-img1"></div>
-                    </div>
-                </div>
-            </div>
+            <header-component v-bind:title="'资产' + operateList[operate-1] + '清单'" v-bind:hasbackbtn="false">
+            </header-component>
+            
             <div data-control="CONTENT" id="ScrollContent">
-  <div class="scrollbox">
+        <div class="scrollbox">
         <div class="ub ub-hor ub-f1 ulev-1 uinn ub-ac c-gra1 txtcolor">
-            <div class="ub-f1 ub-con ub-ac ub-pc ub">
-                编码
-            </div>
+            <div class="ub-f1 ub-con ub-ac ub-pc ub">编码</div>
             <div class="umw1"></div>
-            <div class="ub-f1 ub-con ub-ac ub-pc ub">
-                名称
-            </div>
+            <div class="ub-f1 ub-con ub-ac ub-pc ub">名称</div>
             <div class="umw1"></div>
-            <div class="ub-f1 ub-con ub-ac ub-pc ub">
-                类别
-            </div>
+            <div class="ub-f1 ub-con ub-ac ub-pc ub">类别</div>
             <div class="umw1"></div>
-            <div class="ub-f1 ub-con ub-ac ub-pc ub">
-                照片
-            </div>
+            <div class="ub-f1 ub-con ub-ac ub-pc ub">照片</div>
         </div>
         <div id="tableBody">
             <div class="ub ub-hor ub-f1 ulev-1 uinn ub-ac umh4" v-for="(item,index) in zcList" v-on:click="trSelect(item,index)" >
@@ -95,6 +79,6 @@
         <script src="../../js/appcan.treeview.js"></script>
         <script src="../../js/vue/vue.js"></script>
         <script src="../../js/common.js"></script>
-        <script src="js/zcck_receive.js"></script>
+        <script src="js/zc_receive.js"></script>
     </body>
 </html>
