--- a/AppCan_Project/asset-11655123/phone/zc/zccl.html
+++ b/AppCan_Project/asset-11655123/phone/zc/zccl.html
@@ -21,7 +21,7 @@
                     </div>
                     <h1 class="ut ub-f1 ulev-3 ut-s tx-c" tabindex="0">处理流程</h1>
                     <div class="nav-btn" id="nav-right">
-                        <div class="fa  fa-1g  ub-img1"></div>
+                        <component data-import="../component/user_info.html"></component>
                     </div>
                 </div>
             </div>
@@ -92,7 +92,7 @@
         <script src="../js/appcan.slider.js"></script>
         <script src="../js/appcan.tab.js"></script>
         <script src="../js/appcan.treeview.js"></script>
-        <script src="../js/common.js"></script>
         <script src="../js/vue/vue.js"></script> 
+        <script src="../js/common.js"></script>
     </body>
 </html>
