--- a/AppCan_Project/asset-11655123/phone/zc/zcpd.html
+++ b/AppCan_Project/asset-11655123/phone/zc/zcpd.html
@@ -21,7 +21,7 @@
                     </div>
                     <h1 class="ut ub-f1 ulev-3 ut-s tx-c" tabindex="0">盘点流程</h1>
                     <div class="nav-btn" id="nav-right">
-                        <div class="fa  fa-1g  ub-img1"></div>
+                        <component data-import="../component/user_info.html"></component>
                     </div>
                 </div>
             </div>
