--- a/AppCan_Project/asset-11655123/phone/zc/search.html
+++ b/AppCan_Project/asset-11655123/phone/zc/search.html
@@ -22,18 +22,12 @@
             </header-component>
             <div data-control="CONTENT" id="ScrollContent">
         <div class="scrollbox">
-        <div class="ub ub-hor ub-f1 ulev-1 uinn ub-ac c-gra1 txtcolor">
-            <div class="ub-f1 ub-con ub-ac ub-pc ub">
-                编码
-            </div>
+        <div class="ub uinn c-gra1 table-head">
+            <div class="ub-f1 ub-con ub-pc ub">编码</div>
             <div class="umw1"></div>
-            <div class="ub-f1 ub-con ub-ac ub-pc ub">
-                名称
-            </div>
+            <div class="ub-f1 ub-con ub-pc ub">名称</div>
             <div class="umw1"></div>
-            <div class="ub-f1 ub-con ub-ac ub-pc ub">
-                类别
-            </div>
+            <div class="ub-f1 ub-con ub-pc ub">类别</div>
         </div>
         <div>
             <div class="ub ub-hor ub-f1 ulev-1 uinn ub-ac umh4" v-for="item in resultList" v-on:click="trSelect(item)">
@@ -61,11 +55,6 @@
         <script src="../js/appcan.control.js"></script>
         <script src="../js/appcan.scrollbox.js"></script>
         <script src="../js/template.import.js"></script>
-        <script src="../js/appcan.listview.js"></script>
-        <script src="../js/appcan.optionList.js"></script>
-        <script src="../js/appcan.slider.js"></script>
-        <script src="../js/appcan.tab.js"></script>
-        <script src="../js/appcan.treeview.js"></script>
         <script src="../js/vue/vue.js"></script>
         <script src="../js/common.js"></script>
         <script src="js/search.js"></script>
