--- a/AppCan_Project/asset-11655123/phone/my/my_assets.html
+++ b/AppCan_Project/asset-11655123/phone/my/my_assets.html
@@ -13,8 +13,7 @@
     </head>
     <body ontouchstart>
         <div class="bc-bg" tabindex="0" data-control="PAGE" id="Page">
-            <header-component v-bind:title="'当前资产'" v-bind:hasbackbtn="true">
-            </header-component>
+            <header-component v-bind:title="'当前资产'" v-bind:hasbackbtn="true"></header-component>
             
             <div data-control="CONTENT" id="ScrollContent">
             <div class="scrollbox">
@@ -43,7 +42,7 @@
                     </div>
                 </div>
                 <div class="uinn uinn-at1">
-                    <div class="button ub ub-ac bc-text-head ub-pc sc-btn uc-a1" v-on:click="closeView" >取消</div>
+                    <div class="button ub ub-ac bc-text-head ub-pc sc-btn uc-a1" v-on:click="closeView" >返回</div>
                 </div>
             </div>
         </div>
