--- a/AppCan_Project/asset-11655123/phone/zc/count.html
+++ b/AppCan_Project/asset-11655123/phone/zc/count.html
@@ -80,7 +80,7 @@ var vm = new Vue({
             return;
         }
         var url = sys_common.rootPath + sys_common.contextPath + "lz/count/"+this.operateId;
-        appcan.ajax({
+        sys_common.ajax({
             url : url,
             type : "GET",
             dataType:"json",
