--- a/AppCan_Project/asset-11655123/phone/zc/zclz.html
+++ b/AppCan_Project/asset-11655123/phone/zc/zclz.html
@@ -15,6 +15,7 @@
     <body ontouchstart>
         <div class="bc-bg" tabindex="0" data-control="PAGE" id="Page">
             <header-component v-bind:title="'流转流程'" v-bind:hasbackbtn="true"></header-component>
+            <loading-component ></loading-component>
             <div data-control="CONTENT" id="ScrollContent">
                 <div class="ub ub-ver">
                     <div id="Title">资产查询检索</div>
