--- a/AppCan_Project/asset-11655123/phone/index.html
+++ b/AppCan_Project/asset-11655123/phone/index.html
@@ -17,7 +17,7 @@
         <div class="bc-bg" tabindex="0" data-control="PAGE" id="Page">
             <header-component v-bind:title="tabs.items[tabs.selectIndex].text" v-bind:hasbackbtn="false">
             </header-component>
-            
+            <loading-component ></loading-component>
             <div data-control="CONTENT" id="ScrollContent">
                 <div id="listview"  class="ubt bc-border sc-bg">
                     <ul>
