--- a/AppCan_Project/asset-11655123/phone/zc/search.html
+++ b/AppCan_Project/asset-11655123/phone/zc/search.html
@@ -18,8 +18,8 @@
     </head>
     <body ontouchstart>
         <div class="bc-bg" tabindex="0" data-control="PAGE" id="Page">
-            <header-component v-bind:title="'查询结果'" v-bind:hasbackbtn="true">
-            </header-component>
+            <header-component v-bind:title="'查询结果'" v-bind:hasbackbtn="true"></header-component>
+            <loading-component ></loading-component>
             <div data-control="CONTENT" id="ScrollContent">
         <div class="scrollbox">
         <div class="ub uinn c-gra1 table-head">
