--- a/AppCan_Project/asset-11655123/phone/zc/zcck/zc_confirm.html
+++ b/AppCan_Project/asset-11655123/phone/zc/zcck/zc_confirm.html
@@ -15,6 +15,7 @@
         <div class="bc-bg" tabindex="0" data-control="PAGE" id="Page">
             <header-component v-bind:title="'资产' + operateList[operate-1]" v-bind:hasbackbtn="false">
             </header-component>
+            <loading-component ></loading-component>
             <div data-control="CONTENT" id="ScrollContent">
             <div class="scrollbox">
                 <div>请交接货物, 提交交接信息</div>
