--- a/AppCan_Project/asset-11655123/phone/zc/zcck/zc_list.html
+++ b/AppCan_Project/asset-11655123/phone/zc/zcck/zc_list.html
@@ -15,6 +15,7 @@
         <div class="bc-bg" tabindex="0" data-control="PAGE" id="Page">
             <header-component v-bind:title="operateList[operate-1].name + '清单'" v-bind:hasbackbtn="false">
             </header-component>
+            <loading-component ></loading-component>
             <div data-control="CONTENT" id="ScrollContent">
                 <div class="scrollbox">
                 <div class="ub uinn c-gra1 table-head">
@@ -49,7 +50,7 @@
                     <div class="button ub ub-ac bc-text-head ub-pc bc-btn uc-a1" v-on:click="continueSearch" >继续检索添加</div>
                 </div>
                 <div class="uinn uinn-at1">
-                    <div class="button ub ub-ac bc-text-head ub-pc sc-btn uc-a1" >对方无法扫码</div>
+                    <div class="button ub ub-ac bc-text-head ub-pc sc-btn uc-a1" v-on:click="toReceive">对方无法扫码</div>
                 </div>
                 </div>
             </div>
