--- a/AppCan_Project/asset-11655123/phone/zc/zcck/zc_receive.html
+++ b/AppCan_Project/asset-11655123/phone/zc/zcck/zc_receive.html
@@ -25,7 +25,7 @@
         <div class="bc-bg" tabindex="0" data-control="PAGE" id="Page">
             <header-component v-bind:title="'资产' + operateList[operate-1] + '清单'" v-bind:hasbackbtn="false">
             </header-component>
-            
+            <loading-component ></loading-component>
             <div data-control="CONTENT" id="ScrollContent">
         <div class="scrollbox">
         <div class="ub uinn c-gra1 table-head">
