--- a/AppCan_Project/asset-11655123/phone/zc/zcck/zc_tip.html
+++ b/AppCan_Project/asset-11655123/phone/zc/zcck/zc_tip.html
@@ -15,6 +15,7 @@
         <div class="bc-bg" tabindex="0" data-control="PAGE" id="Page">
             <header-component v-bind:title="'资产' + operateList[operate-1]" v-bind:hasbackbtn="false">
             </header-component>
+            <loading-component ></loading-component>
             <div data-control="CONTENT" id="ScrollContent">
             <div class="scrollbox">
                 <div>操作成功, 点击"完成"返回首页</div>
@@ -37,7 +38,7 @@ var vm = new Vue({
         operate : appcan.locStorage.getVal("operate") || 1,
         operateList : sys_common.operateList
     },
-    mounted : function(){
+    created : function(){
         appcan.locStorage.remove("operateId");
         appcan.locStorage.remove("operate");
     },
