拍照上传功能修复

--- a/AppCan_Project/asset-11655123/phone/zc/zcck/zc_list.html
+++ b/AppCan_Project/asset-11655123/phone/zc/zcck/zc_list.html
@@ -21,7 +21,7 @@
                 <div class="ub uinn c-gra1 table-head">
                     <div class="ub-f1 ub-con ub-pc ub">序号</div>
                     <div class="umw1"></div>
-                    <div class="ub-f1 ub-con ub-pc ub">ID</div>
+                    <div class="ub-f1 ub-con ub-pc ub">编号</div>
                     <div class="umw1"></div>
                     <div class="ub-f1 ub-con ub-pc ub">名称</div>
                     <div class="umw1"></div>
