--- a/AppCan_Project/asset-11655123/phone/zc/zcpd.html
+++ b/AppCan_Project/asset-11655123/phone/zc/zcpd.html
@@ -75,7 +75,7 @@
                         <div class="button ub ub-ac bc-text-head ub-pc bc-btn uc-a1"  v-on:click="search">查询</div>
                     </div>
                     <div class=" uinn uinn-at1">
-                        <div class="button ub ub-ac bc-text-head ub-pc sc-btn uc-a1"  v-on:click="backView"> 取消</div>
+                        <div class="button ub ub-ac bc-text-head ub-pc sc-btn uc-a1"  v-on:click="backView" onclick="uexWindow.close()"> 取消</div>
                     </div>
                 </div>
               </form>
