--- a/AppCan_Project/asset-11655123/phone/my/my_assets.html
+++ b/AppCan_Project/asset-11655123/phone/my/my_assets.html
@@ -20,7 +20,7 @@
                  <div class="ub uinn c-gra1 table-head">
                     <div class="ub-f1 ub-con ub-pc ub">序号</div>
                     <div class="umw1"></div>
-                    <div class="ub-f1 ub-con ub-pc ub">ID</div>
+                    <div class="ub-f1 ub-con ub-pc ub">编号</div>
                     <div class="umw1"></div>
                     <div class="ub-f1 ub-con ub-pc ub">名称</div>
                     <div class="umw1"></div>
@@ -58,7 +58,7 @@ var vm = new Vue({
     data : {
         zcList :[]
     },
-    created : function(){
+    mounted : function(){
         var loginUserStr = appcan.locStorage.getVal("login_user");
         if(!loginUserStr) {
             return;
