出库流程优化

--- a/AppCan_Project/asset-11655123/phone/zc/zcck/zc_confirm.html
+++ b/AppCan_Project/asset-11655123/phone/zc/zcck/zc_confirm.html
@@ -57,6 +57,8 @@ var vm = new Vue({
                 },
                 success : function(){
                     alert("操作成功");
+                    appcan.openWinWithUrl('count','../count.html');
+                    uexWindow.close();
                 }
             });
         }
