--- a/AppCan_Project/asset-11655123/phone/zc/zcck/zc_confirm.html
+++ b/AppCan_Project/asset-11655123/phone/zc/zcck/zc_confirm.html
@@ -72,7 +72,9 @@ var vm = new Vue({
                             break;
                         case "3" : //TODO 回收
                     }
-                    uexWindow.close();
+                    setTimeout(function(){
+                        uexWindow.close();
+                    }, 1000);
                 }
             });
         }
