--- a/AppCan_Project/asset-11655123/phone/my/my_assets.html
+++ b/AppCan_Project/asset-11655123/phone/my/my_assets.html
@@ -14,7 +14,7 @@
     <body ontouchstart>
         <div class="bc-bg" tabindex="0" data-control="PAGE" id="Page">
             <header-component v-bind:title="'当前资产'" v-bind:hasbackbtn="true"></header-component>
-            
+            <loading-component ></loading-component>
             <div data-control="CONTENT" id="ScrollContent">
             <div class="scrollbox">
                  <div class="ub uinn c-gra1 table-head">
