--- a/AppCan_Project/asset-11655123/phone/my/my_assets.html
+++ b/AppCan_Project/asset-11655123/phone/my/my_assets.html
@@ -15,6 +15,16 @@
         <div class="bc-bg" tabindex="0" data-control="PAGE" id="Page">
             <header-component v-bind:title="'当前资产'" v-bind:hasbackbtn="true"></header-component>
             <loading-component ></loading-component>
+            <div class="dialog-container" v-show="showDialog"> 
+                <div class="mask" v-on:click="showDialog=false"></div>
+                <div class="dialog-panel">
+                    <div class="ub ub-hor ub-f1 ulev-1 uinn ub-ac umh4" v-for="item in datailList" >
+                        <div class="ub-f1 ub-con ub-ac ub-pc ub">{{item.label}}</div>
+                        <div class="umw1"></div>
+                        <div class="ub-f1 ub-con ub-ac ub-pc ub">{{item.value}}</div>
+                    </div>
+                </div>
+            </div>
             <div data-control="CONTENT" id="ScrollContent">
             <div class="scrollbox">
                  <div class="ub uinn c-gra1 table-head">
@@ -29,7 +39,8 @@
                     <div class="ub-f1 ub-con ub-pc ub">单位</div>
                 </div>
                 <div>
-                    <div class="ub ub-hor ub-f1 ulev-1 uinn ub-ac umh4" v-for="(item,index) in zcList" >
+                    <div class="ub ub-hor ub-f1 ulev-1 uinn ub-ac umh4" v-for="(item,index) in zcList" 
+                           v-on:click="trClick(index)" >
                         <div class="ub-f1 ub-con ub-ac ub-pc ub">{{index+1}}</div>
                         <div class="umw1"></div>
                         <div class="ub-f1 ub-con ub-ac ub-pc ub">{{item.uuid}}</div>
@@ -53,10 +64,14 @@
         <script src="../js/common.js"></script>
         <script>
 (function(){
+//详情页需要显示的字段
+var datailColumns = {mingch:"名称",ggxh:"规格",shul:"数量",ppcj:"厂家",gysDcxm:"供应商"};
 var vm = new Vue({
     el :"#Page",
     data : {
-        zcList :[]
+        zcList :[],
+        datailList : [],
+        showDialog : false
     },
     mounted : function(){
         var loginUserStr = appcan.locStorage.getVal("login_user");
@@ -77,6 +92,19 @@ var vm = new Vue({
         });
     },
     methods : {
+        trClick : function(index) {
+            var datailList = [];
+            for(var name in this.zcList[index]) {
+                if(name in datailColumns) {
+                    datailList.push({
+                        label : datailColumns[name],
+                        value : this.zcList[index][name]
+                    });
+                }
+            }
+            this.datailList = datailList;
+            this.showDialog = true;
+        },
         closeView : function(){
             uexWindow.close();
         }
