--- a/AppCan_Project/asset-11655123/phone/zc/search.html
+++ b/AppCan_Project/asset-11655123/phone/zc/search.html
@@ -20,6 +20,21 @@
         <div class="bc-bg" tabindex="0" data-control="PAGE" id="Page">
             <header-component v-bind:title="'查询结果'" v-bind:hasbackbtn="true"></header-component>
             <loading-component ></loading-component>
+            <div class="dialog-container" v-show="showDialog"> 
+                <div class="mask" v-on:click="showDialog=false"></div>
+                <div class="dialog-panel">
+                    <div class="ub ub-hor ub-f1 ulev-1 uinn ub-ac umh4" v-for="item in datailList" >
+                        <div class="ub-f1 ub-con ub-ac ub-pc ub">{{item.label}}</div>
+                        <div class="umw1"></div>
+                        <div class="ub-f1 ub-con ub-ac ub-pc ub">{{item.value}}</div>
+                    </div>
+                    <div class="uinn uinn-at1">
+                        <div class="button ub ub-ac bc-text-head ub-pc bc-btn uc-a1" v-on:click="trSelect">
+                          {{selectIndex===null||resultList[selectIndex].isSelected ? '取消选中' : '选中'}}
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div data-control="CONTENT" id="ScrollContent">
         <div class="scrollbox">
         <div class="ub uinn c-gra1 table-head">
@@ -32,7 +47,8 @@
             <div class="ub-f1 ub-con ub-pc ub">保管人</div>
         </div>
         <div>
-            <div class="ub ub-hor ub-f1 ulev-1 uinn ub-ac umh4" v-for="item in resultList" v-on:click="trSelect(item)">
+            <div class="ub ub-hor ub-f1 ulev-1 uinn ub-ac umh4" v-for="(item,index) in resultList" 
+                  v-bind:class="{selected : item.isSelected}" v-on:click="trClick(index)">
                 <div class="ub-f1 ub-con ub-ac ub-pc ub">{{item.zcid}}</div>
                 <div class="umw1"></div>
                 <div class="ub-f1 ub-con ub-ac ub-pc ub">{{item.mingch}}</div>
