--- a/AppCan_Project/asset-11655123/phone/my/my_assets.html
+++ b/AppCan_Project/asset-11655123/phone/my/my_assets.html
@@ -15,16 +15,8 @@
         <div class="bc-bg" tabindex="0" data-control="PAGE" id="Page">
             <header-component v-bind:title="'当前资产'" v-bind:hasbackbtn="true"></header-component>
             <loading-component ></loading-component>
-            <div class="dialog-container" v-show="showDialog"> 
-                <div class="mask" v-on:click="showDialog=false"></div>
-                <div class="dialog-panel">
-                    <div class="ub ub-hor ub-f1 ulev-1 uinn ub-ac umh4" v-for="item in datailList" >
-                        <div class="ub-f1 ub-con ub-ac ub-pc ub">{{item.label}}</div>
-                        <div class="umw1"></div>
-                        <div class="ub-f1 ub-con ub-ac ub-pc ub">{{item.value}}</div>
-                    </div>
-                </div>
-            </div>
+            <dialog-component :datail_list="datailList" :show_dialog="showDialog" :image_list="imageList"
+                    v-on:toggle-detail="toggleDialog" ></dialog-component>
             <div data-control="CONTENT" id="ScrollContent">
             <div class="scrollbox">
                  <div class="ub uinn c-gra1 table-head">
@@ -43,7 +35,7 @@
                            v-on:click="trClick(index)" >
                         <div class="ub-f1 ub-con ub-ac ub-pc ub">{{index+1}}</div>
                         <div class="umw1"></div>
-                        <div class="ub-f1 ub-con ub-ac ub-pc ub">{{item.uuid}}</div>
+                        <div class="ub-f1 ub-con ub-ac ub-pc ub">{{item.zcid}}</div>
                         <div class="umw1"></div>
                         <div class="ub-f1 ub-con ub-ac ub-pc ub">{{item.mingch}}</div>
                         <div class="umw1"></div>
@@ -62,6 +54,7 @@
         <script src="../js/appcan.control.js"></script>
         <script src="../js/vue/vue.js"></script>
         <script src="../js/common.js"></script>
+        <script src="../component/dialog.js"></script>
         <script>
 (function(){
 //详情页需要显示的字段
@@ -71,6 +64,7 @@ var vm = new Vue({
     data : {
         zcList :[],
         datailList : [],
+        imageList : null,
         showDialog : false
     },
     mounted : function(){
@@ -103,7 +97,19 @@ var vm = new Vue({
                 }
             }
             this.datailList = datailList;
-            this.showDialog = true;
+            var _this = this;
+            sys_common.ajax({
+                type:"POST",
+                url : sys_common.rootPath + sys_common.contextPath + "zichan/findLastPhoto",
+                data : {zcid : this.zcList[index].zcid, r:Math.random()},
+                success : function(res) {
+                    _this.imageList = res;
+                    _this.toggleDialog(true);
+                }
+            });
+        },
+        toggleDialog : function(status){
+            this.showDialog = status;
         },
         closeView : function(){
             uexWindow.close();
