--- a/AppCan_Project/asset-11655123/phone/zc/search.html
+++ b/AppCan_Project/asset-11655123/phone/zc/search.html
@@ -20,21 +20,10 @@
         <div class="bc-bg" tabindex="0" data-control="PAGE" id="Page">
             <header-component v-bind:title="'查询结果'" v-bind:hasbackbtn="true"></header-component>
             <loading-component ></loading-component>
-            <div class="dialog-container" v-show="showDialog"> 
-                <div class="mask" v-on:click="showDialog=false"></div>
-                <div class="dialog-panel">
-                    <div class="ub ub-hor ub-f1 ulev-1 uinn ub-ac umh4" v-for="item in datailList" >
-                        <div class="ub-f1 ub-con ub-ac ub-pc ub">{{item.label}}</div>
-                        <div class="umw1"></div>
-                        <div class="ub-f1 ub-con ub-ac ub-pc ub">{{item.value}}</div>
-                    </div>
-                    <div class="uinn uinn-at1">
-                        <div class="button ub ub-ac bc-text-head ub-pc bc-btn uc-a1" v-on:click="trSelect">
-                          {{selectIndex===null||resultList[selectIndex].isSelected ? '取消选中' : '选中'}}
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <dialog-component :datail_list="datailList" :image_list="imageList" :show_dialog="showDialog" 
+                    v-on:toggle-detail="toggleDialog" v-on:tr-select="trSelect" 
+                    :button_text="selectIndex===null||resultList[selectIndex].isSelected ? '取消选中' : '选中'">
+            </dialog-component>
             <div data-control="CONTENT" id="ScrollContent">
         <div class="scrollbox">
         <div class="ub uinn c-gra1 table-head">
@@ -75,6 +64,7 @@
         <script src="../js/appcan.control.js"></script>
         <script src="../js/vue/vue.js"></script>
         <script src="../js/common.js"></script>
+        <script src="../component/dialog.js"></script>
         <script src="js/search.js"></script>
     </body>
 </html>
