--- a/AppCan_Project/asset-11655123/phone/zc/zcck/zc_list.html
+++ b/AppCan_Project/asset-11655123/phone/zc/zcck/zc_list.html
@@ -33,7 +33,7 @@
                     <div class="ub ub-hor ub-f1 ulev-1 uinn ub-ac umh4" v-for="(item,index) in zcList" >
                         <div class="ub-f1 ub-con ub-ac ub-pc ub">{{index+1}}</div>
                         <div class="umw1"></div>
-                        <div class="ub-f1 ub-con ub-ac ub-pc ub">{{item.uuid}}</div>
+                        <div class="ub-f1 ub-con ub-ac ub-pc ub">{{item.zcid}}</div>
                         <div class="umw1"></div>
                         <div class="ub-f1 ub-con ub-ac ub-pc ub">{{item.mingch}}</div>
                         <div class="umw1"></div>
