盘点相关功能页面

--- a/AppCan_Project/asset-11655123/phone/my/my_assets.html
+++ b/AppCan_Project/asset-11655123/phone/my/my_assets.html
@@ -67,7 +67,7 @@ var vm = new Vue({
         imageList : null,
         showDialog : false
     },
-    mounted : function(){
+    created : function(){
         var loginUserStr = appcan.locStorage.getVal("login_user");
         if(!loginUserStr) {
             return;
